Add verbose mode to the commmit -
This will show what is being committed

--- a/.gitconfig
+++ b/.gitconfig
@@ -34,7 +34,7 @@
     aa = add -A
     a = add -p
     s = status -s
-    c = commit
+    c = commit -v
     co = checkout
     cb = checkout -b
     ci = commit -m
