Add `rebase=true` for all git pull's

--- a/.gitconfig
+++ b/.gitconfig
@@ -47,3 +47,5 @@
     lg = log --graph --decorate --branches --oneline --remotes --tags --all --color
 [rerere]
 	enabled = true
+[pull]
+    rebase = true
